Mon Sep 30 11:43:01 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* xe_stubs.adb: Use configuration name as partition main
	subprogram. File stamp checking has been a little bit improved.

Sun Sep 29 18:33:58 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* xe_utils.adb: Later has been changed to More_Recent.

Mon Sep 23 18:23:05 1996  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe.adb: Get_Host, Get_Command_Line, Get_Absolute_Exec,
	Get_Relative_Exec and Get_Main_Subprogram return default values
	when no specific value has been specified.

Wed Sep 11 19:26:16 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_parse.adb: Give proper error message on undeclared variable.

Wed Sep 11 15:57:44 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* xe_scan.adb, xe.ads : Don't tolerate reserved keywords anymore.

	* xe_back.adb: New error message when no main program has been
 	defined in the configuration file.

Wed Sep 11 14:39:58 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* config.sdefault: Replaced which by type.
